fix: add gap

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     align-items: center;
+    gap: 15;
 }
 
 green {
